@@ -2086,11 +2086,11 @@ div[id$="_Index__view"] .ox-list-title {
 	border-color: #CDB380; 
 }
 
-.ox-frame .ox-required-editor input, #sign_in_box .ox-required-editor input {
+.ox-frame .ox-required-editor input, #sign_in_box .ox-required-editor input, .ox-required-editor textarea {
 	border-color: #a58341; 
 }
 
-.ox-frame .ox-frame .ox-required-editor input {
+.ox-frame .ox-frame .ox-required-editor input, .ox-frame .ox-required-editor textarea {
 	border-color: #806632; 
 }
 
@@ -2098,16 +2098,18 @@ div[id$="_Index__view"] .ox-list-title {
 	border-color: #a58341 !important;
 }
 
-.ui-dialog .ox-frame .ox-required-editor input {
+.ui-dialog .ox-frame .ox-required-editor input, .ui-dialog .ox-required-editor textarea {
 	border-color: #806632 !important;
 }
 
-.ui-dialog .ox-frame .ox-frame .ox-required-editor input {
+.ui-dialog .ox-frame .ox-frame .ox-required-editor input, .ui-dialog .ox-frame .ox-required-editor textarea {
 	border-color: #5b4924 !important;
 }
 
 .ox-error-editor input,
-.ox-frame .ox-error-editor input, .ox-frame .ox-frame .ox-error-editor input { 
+.ox-frame .ox-error-editor input, .ox-frame .ox-frame .ox-error-editor input,
+.ox-error-editor textarea, 
+.ox-frame .ox-error-editor textarea, .ox-frame .ox-frame .ox-error-editor textarea {  
 	border-color: #DC4A38 !important; /* To work in dialog */
 }
 
